Make a yaml version of settings, update readme